--- a/src/simulation.ipynb
+++ b/src/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,21 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[HandFeatures(rank=<Rank.HIGH_CARD: 0>, two_pair_potential=<Potential.POSSIBLE: 1>, three_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_potential=<Potential.POSSIBLE: 1>, flush_potential=<Potential.POSSIBLE: 1>, full_house_potential=<Potential.POSSIBLE: 1>, four_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_flush_potential=<Potential.POSSIBLE: 1>),\n",
-       " HandFeatures(rank=<Rank.HIGH_CARD: 0>, two_pair_potential=<Potential.POSSIBLE: 1>, three_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_potential=<Potential.POSSIBLE: 1>, flush_potential=<Potential.POSSIBLE: 1>, full_house_potential=<Potential.POSSIBLE: 1>, four_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_flush_potential=<Potential.POSSIBLE: 1>),\n",
-       " HandFeatures(rank=<Rank.HIGH_CARD: 0>, two_pair_potential=<Potential.POSSIBLE: 1>, three_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_potential=<Potential.POSSIBLE: 1>, flush_potential=<Potential.POSSIBLE: 1>, full_house_potential=<Potential.POSSIBLE: 1>, four_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_flush_potential=<Potential.POSSIBLE: 1>),\n",
-       " HandFeatures(rank=<Rank.HIGH_CARD: 0>, two_pair_potential=<Potential.POSSIBLE: 1>, three_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_potential=<Potential.POSSIBLE: 1>, flush_potential=<Potential.POSSIBLE: 1>, full_house_potential=<Potential.POSSIBLE: 1>, four_of_a_kind_potential=<Potential.POSSIBLE: 1>, straight_flush_potential=<Potential.POSSIBLE: 1>)]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Card(value=3, suit=1), Card(value=13, suit=1)]\n",
+      "Rank.HIGH_CARD\n",
+      "None\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43menvironment\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Dev\\The-Gang-Bot\\src\\game.py:25\u001b[0m, in \u001b[0;36mTheGang.reset\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2\u001b[39m): \u001b[38;5;66;03m# Deal 2 cards to each player\u001b[39;00m\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m hand \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhands:\n\u001b[1;32m---> 25\u001b[0m         \u001b[43mhand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_card\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeck\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m [hand\u001b[38;5;241m.\u001b[39mfeatures \u001b[38;5;28;01mfor\u001b[39;00m hand \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhands]\n",
+      "File \u001b[1;32mc:\\Dev\\The-Gang-Bot\\src\\hand.py:318\u001b[0m, in \u001b[0;36mHand.add_card\u001b[1;34m(self, card)\u001b[0m\n\u001b[0;32m    316\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcards\u001b[38;5;241m.\u001b[39mappend(card)\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcards) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m--> 318\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecalculate_hand_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Dev\\The-Gang-Bot\\src\\hand.py:79\u001b[0m, in \u001b[0;36mHand.recalculate_hand_features\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;28mprint\u001b[39m(hand)\n\u001b[0;32m     78\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeatures\u001b[38;5;241m.\u001b[39mrank \u001b[38;5;241m=\u001b[39m rank\n\u001b[1;32m---> 79\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeatures\u001b[38;5;241m.\u001b[39mfirst_card \u001b[38;5;241m=\u001b[39m \u001b[43mhand\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeatures\u001b[38;5;241m.\u001b[39msecond_card \u001b[38;5;241m=\u001b[39m hand[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeatures\u001b[38;5;241m.\u001b[39mthird_card \u001b[38;5;241m=\u001b[39m hand[\u001b[38;5;241m2\u001b[39m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
     }
    ],
    "source": [
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "battleship",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
