--- a/src/simulation.ipynb
+++ b/src/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "from typing import List\n",
     "\n",
     "from game import TheGang\n",
     "from models import HandFeatures"
@@ -31,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using GPU\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +65,8 @@
     "class PolicyNetwork(nn.Module):\n",
     "    def __init__(self, input_size, hidden_layer_size, hidden_layer_count = 1):\n",
     "        super(PolicyNetwork, self).__init__()\n",
-    "        self.hidden_layers = [nn.Linear(input_size, hidden_layer_size)]\n",
+    "        self.hidden_layers = nn.ModuleList()\n",
+    "        self.hidden_layers.append(nn.Linear(input_size, hidden_layer_size))\n",
     "        nn.init.normal_(self.hidden_layers[0].weight, mean = 0, std = 0.01)\n",
     "        nn.init.normal_(self.hidden_layers[0].bias, mean = 0, std = 0.01)\n",
     "        for _ in range(hidden_layer_count-1):\n",
@@ -74,16 +84,17 @@
     "            Returns:\n",
     "                a tensor of probabilities\n",
     "        '''         \n",
+    "        s = s.to(next(self.parameters()).device)\n",
     "        for layer in self.hidden_layers:\n",
-    "            s = torch.relu(layer(s))    #pass through the hidden layers\n",
+    "             s = torch.relu(layer(s))    #pass through the hidden layers\n",
     "        s = self.output_layer(s)\n",
     "        action_probs = torch.softmax(s, dim=1)    #use softmax to get action probabilities\n",
-    "        return action_probs\n"
+    "        return action_probs.to('cpu')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,18 +106,18 @@
     "class Agent():\n",
     "    def __init__(self, config: AgentConfig):\n",
     "        self.config = config\n",
-    "        self.pi = PolicyNetwork(17, config.hidden_layer_size, config.hidden_layer_count)\n",
+    "        self.pi = PolicyNetwork(17, config.hidden_layer_size, config.hidden_layer_count).to(device)\n",
     "        self.optimizer = optim.Adam(self.pi.parameters(), lr=self.config.learning_rate)\n",
     "\n",
-    "    def generate_actions(self, state_array: list[list[int]]):\n",
-    "        action_probs = self.pi(torch.tensor(state_array, dtype=torch.float32, device=device)) # Create tensor and feed state through model\n",
+    "    def generate_actions(self, state_array: List[List[int]]):\n",
+    "        action_probs = self.pi(torch.tensor(state_array, dtype=torch.float32)) # Create tensor and feed state through model\n",
     "        sampled_actions = torch.multinomial(action_probs, 1).squeeze(dim=1)\n",
     "        action_space = torch.tensor([1, 2, 3, 4])\n",
     "        final_actions = action_space[sampled_actions]\n",
     "        return final_actions\n",
     "\n",
-    "    def generate_action_probs(self, a: list[int], state_array: list[list[int]]):\n",
-    "        all_action_probs = self.pi(torch.tensor(state_array, dtype=torch.float32, device=device)) # Create tensor and feed state through model\n",
+    "    def generate_action_probs(self, a: List[int], state_array: List[List[int]]):\n",
+    "        all_action_probs = self.pi(torch.tensor(state_array, dtype=torch.float32)) # Create tensor and feed state through model\n",
     "        a_tensor = torch.tensor(a, dtype=torch.long)\n",
     "        a_tensor = a_tensor - 1\n",
     "        performed_action_probs = all_action_probs.gather(1, a_tensor.unsqueeze(1)).squeeze(1)\n",
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,14 +240,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda', index=0)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(agent.pi.parameters()).device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 347/40000 [06:38<11:56:27,  1.08s/it]"
+      "  0%|          | 9/40000 [00:15<14:10:16,  1.28s/it]"
      ]
     }
    ],
@@ -251,7 +282,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "battleship",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
