--- a/src/simulation.ipynb
+++ b/src/simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using GPU\n"
+      "Using CPU\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
     "        \n",
     "        # Checkpoint if applicable\n",
     "        if epoch % training_config.checkpoint_freq == 0:\n",
-    "            agent.checkpoint(model_name, starting_epoch + num_epochs)\n",
+    "            agent.checkpoint(model_name, starting_epoch + epoch)\n",
     "            with open(f'checkpoints/{model_name}/epoch_rewards.csv', 'w', newline=\"\") as f:\n",
     "                writer = csv.writer(f)\n",
     "                writer.writerow(average_epoch_rewards)\n",
@@ -496,9 +496,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:57<00:00,  5.78s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    " "
+    "agent_config = AgentConfig(\n",
+    "    hidden_layer_count=32\n",
+    ")\n",
+    "training_config = TrainingConfig(\n",
+    "    checkpoint_freq=1000\n",
+    ")\n",
+    "agent = Agent(agent_config)\n",
+    "env = TheGang()\n",
+    "epoch_rewards = train_agent(agent, env, training_config, 10000, 0, 'Baseline_Deep')"
    ]
   }
  ],
